# RustMusic

./: .gitignore  Cargo.toml  LICENSE  README.md  roadmap.md
src/: .env  main.rs
src/api/: spotify.rs
src/controllers/: database.rs  home.rs  tracks.rs
src/data/: models.rs  utils.rs
src/database/: database.rs
src/settings/: .env
