[package]
name = "n"
version = "1.1.5"
edition = "2021"
description = "Music app in Rust"
authors = ["Needles"]
repository = "https://github.com/cpasneedles/rustmusic" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.0.0", features = ["v4"] }
audiotags = "0.4.1"
base64 = "0.21.2"
image = "0.24.6"
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
reqwest = "0.11.19"
dotenv = "0.15.0"